add content warning

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -31,8 +31,15 @@
 \begin{document}
 \maketitle
 
-\vspace{4em}
 
+\vspace{1em}
+
+\centering
+\textbf{Content Warning}: This document deals with the categorization of toxic content and messages found online that contain profane, vulgar, or offensive content. Proceed with caution.
+
+\vspace{2em}
+
+\noindent
 \begin{abstract}
 
     %    Dota 2 is a multiplayer online battle arena (MOBA) game where players can communicate in chat logs  with other players on their team (and possibly on the other team). Communications between players can be either positive or negative, regardless of team affiliation. We wish to categorize messages into different types: toxic messages, positive messages, casual chat (unrelated to the game), cooperative chat (informative and neutral). We'll break toxicity down further into verbal base, hate speech/offensive language, and negative attitude. Thus, we have a single-label classification task with 6 classes.
