final commit for annotation

--- a/1-annotation-setup/guidelines/guidelines.tex
+++ b/1-annotation-setup/guidelines/guidelines.tex
@@ -107,7 +107,7 @@ This will be done by running the file \textit{annotator.py} in which the annotat
 
 These messages have been split up into individual games, where the annotator can see the current game they're labeling, how many messages are in the game, and the time the last message was sent in the game.
 Each player in the game is assigned a random name to easily keep track of players and their random name, message and time of message sent is given to the annotator.
-The annotator is also able to see the 5 preceeding and subsequent messages in order to understand the context in which the message was sent.
+The annotator is also able to see the 5 preceeding and 4 subsequent messages in order to understand the context in which the message was sent.
 
 After the annotator has put a label for every message in a game, that game along with the labels will be saved to \textit{input\_data.json} and the annotator will be able to quit the annotation return to annotating anytime after this without risking losing data.
 The annotator is expected to annotate 30 games (through testing we have found that this is roughly 1 hour of work) with each game having around 19 messages, however this number may vary.
