fix a few things

--- a/1-annotation-setup/guidelines/guidelines.tex
+++ b/1-annotation-setup/guidelines/guidelines.tex
@@ -110,7 +110,7 @@ Each player in the game is assigned a random name to easily keep track of player
 The annotator is also able to see the 5 preceeding and 4 subsequent messages in order to understand the context in which the message was sent.
 
 After the annotator has put a label for every message in a game, that game along with the labels will be saved to \textit{input\_data.json} and the annotator will be able to quit the annotation return to annotating anytime after this without risking losing data.
-The annotator is expected to annotate 30 games (through testing we have found that this is roughly 1 hour of work) with each game having around 19 messages, however this number may vary.
+The annotator is expected to annotate around 600 messages (through testing we have found that this is roughly 1 hour of work), however this number might vary.
 
 \vspace{2em}
 
