remove student numbers

--- a/1-annotation-setup/guidelines/guidelines.tex
+++ b/1-annotation-setup/guidelines/guidelines.tex
@@ -79,7 +79,7 @@
 }
 
 \title{Annotation Guidelines \\ Dota 2 Message Classification for Auto-Moderation Purposes}
-\author{Richard Motorgeanu - motorger - 400436012\\ Jacquelyn Pohl - pohlj - 400455088\\ Nicholas Gyorgypal - gyorgypn - 400446785}
+\author{Richard Motorgeanu, Jacquelyn Pohl, Nicholas Gyorgypal}
 \date{\today}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}%
@@ -91,7 +91,7 @@
 \maketitle
 
 
-\vspace{6em}
+\vspace{8em}
 
 \large
 \textbf{Content Warning}: This document deals with the categorization of toxic content and messages found online that contain profane, vulgar, or offensive content. Proceed with caution.
