--- a/3-competition-launch/report/report.tex
+++ b/3-competition-launch/report/report.tex
@@ -60,7 +60,7 @@ If the data came from data segment 1 and 2, we gave priority to data segment 1 a
 
 For data segment 3 and 4, it seemed like both annotators were inexperienced with competitive gaming and chats, so we had a member of our group go through their labels and pick which was more accurate, and let this act as a tie-breaker.
 
-Below we've also attached the distribution of our categories.
+Below we've also attached the distribution of our categories. We notice that the classes are very imbalanced. Despite removing any non-English characters from dataset, we still got a lot of non English text (may be due to annotators classifying misspelt, abbreviated words, or emoticons as non English).
 
 \includegraphics[scale=0.8]{frequency_plot}
 
