--- a/3-competition-launch/report/report.tex
+++ b/3-competition-launch/report/report.tex
@@ -66,6 +66,15 @@ Below we've also attached the distribution of our categories. We notice that the
 
 \section[3]{Baseline}
 
+For our simple baselines we compared Random Baseline and Majority Baselines and found that Majority was better in terms of accuracy (with an accuracy of 27.6\%) but had a false report rate of 1. This means using the Majority model all of our non-negative messages were labeled as negative. Meanwhile Random had a worse accuracy (with an accuracy of 11.3\%) but had a better false report rate of 0.376. So with the Random model only 37.6\% of non-negative messages were labeled as negative.
+
+Comparing both of these to our chosen trained model, Logistic Regression, we see it outperform both the baselines in terms of accuracy (with an accuracy of 39.1\%) but has a slightly worse false report rate compared to the Random model with a rate of 0.468.
+
 \section[4]{Codabench and Google Slides}
+
+\href{https://www.codabench.org/competitions/6413/?secret_key=18cf17ed-e34e-4dbe-bde8-8886d5fd938f#}{Codabench}
+
+\noindent
+\href{https://docs.google.com/presentation/d/13r1v7ZJz09BcJoJHFzwneAz29XX4DrgYUD3a88opioQ/edit?usp=sharing}{Google Slides}
 
 \end{document}
