add gen ai usage

--- a/3-competition-launch/report/report.tex
+++ b/3-competition-launch/report/report.tex
@@ -77,4 +77,8 @@ Comparing both of these to our chosen trained model, Logistic Regression, we see
 \noindent
 \href{https://docs.google.com/presentation/d/13r1v7ZJz09BcJoJHFzwneAz29XX4DrgYUD3a88opioQ/edit?usp=sharing}{Google Slides}
 
+\section[5]{Use of Generative AI}
+
+Generative AI (GitHub Copilot) was used for creating template code for parsing through data and creating baseline models. We approximate around 25 prompts, resulting in 108g of C02 emissions.
+
 \end{document}
